--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.9",
-    "@angular/common": "^10.0.9",
-    "@angular/compiler": "^10.0.9",
-    "@angular/core": "^10.0.9",
-    "@angular/fire": "^6.0.3",
-    "@angular/forms": "^10.0.9",
-    "@angular/platform-browser": "^10.0.9",
-    "@angular/platform-browser-dynamic": "^10.0.9",
-    "@angular/router": "^10.0.9",
-    "firebase": "^7.13.1",
-    "rxjs": "^6.6.2",
-    "tslib": "^2.0.1",
-    "zone.js": "^0.10.3"
+    "@angular/animations": "10.1.6",
+    "@angular/common": "10.1.6",
+    "@angular/compiler": "10.1.6",
+    "@angular/core": "10.1.6",
+    "@angular/fire": "6.0.3",
+    "@angular/forms": "10.1.6",
+    "@angular/platform-browser": "10.1.6",
+    "@angular/platform-browser-dynamic": "10.1.6",
+    "@angular/router": "10.1.6",
+    "@firebase/app": "0.x",
+    "@firebase/app-types": "0.x",
+    "@firebase/firestore": "^1.17.3",
+    "firebase": "7.23.0",
+    "rxjs": "6.6.3",
+    "tslib": "2.0.3",
+    "zone.js": "0.10.3"
   },
   "scripts": {
     "ng": "ng",
